--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,6 +29,8 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
-      - run: bundle exec rake ci
+      - run: bundle exec rake minitest_old
+      - run: bundle exec rake minitest_functional
+      - run: bundle exec rake rubocop_ci
       - run: bin/srb tc
 
