Prototyping third party gems

--- a/sorbet/config
+++ b/sorbet/config
@@ -6,5 +6,6 @@
 --ignore=vendor/
 --ignore=test/
 --ignore=bin/
+--ignore=dsl/demo
 --enable-experimental-requires-ancestor
 --enable-experimental-rbs-comments
