--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,9 @@ on:
   schedule:
     - cron:  '45 4 * * *'
 
+env:
+  CI: true
+
 jobs:
   rubies:
     strategy:
@@ -24,13 +27,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y ripgrep graphviz
+        run: sudo apt-get update && sudo apt-get install -y ripgrep graphviz wamerican
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
-      - run: bundle exec rake minitest_old
-      - run: bundle exec rake minitest_functional
       - run: bundle exec rake rubocop_ci
       - run: bin/srb tc
+      - run: bundle exec rake minitest_dsl
+      - run: bundle exec rake minitest_functional
+      - run: bundle exec rake minitest_old
 
