--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,7 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
       - run: bundle exec rake rubocop_ci
-      - run: bin/srb tc
+      - run: bundle exec rake sorbet
       - run: bundle exec rake minitest_dsl
       - run: bundle exec rake minitest_functional
       - run: bundle exec rake minitest_old
