feat: add new command_runner for dsl cmd.rb to use

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -33,6 +33,7 @@ Roast/UseCmdRunner:
   Enabled: true
   Exclude:
     - 'lib/roast/helpers/cmd_runner.rb'
+    - 'lib/roast/dsl/command_runner.rb'
     - 'roast.gemspec'
 
 Style/MethodCallWithArgsParentheses:
