--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,9 +32,9 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
-      - run: bundle exec rake rubocop_ci
       - run: bundle exec rake sorbet
-      - run: bundle exec rake minitest_dsl
+      - run: bundle exec rake rubocop_ci
+      - run: bundle exec rake minitest_dsl_fast
+      - run: bundle exec rake minitest_dsl_slow
       - run: bundle exec rake minitest_functional
       - run: bundle exec rake minitest_old
-
