--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,6 +20,10 @@ AllCops:
   TargetRubyVersion: 3.4
   UseCache: true
 
+Naming/FileName:
+  Exclude:
+    - "lib/roast-ai.rb"
+
 Sorbet/FalseSigil:
   Enabled: true
   Include:
@@ -34,7 +38,7 @@ Roast/UseCmdRunner:
   Exclude:
     - 'lib/roast/helpers/cmd_runner.rb'
     - 'lib/roast/dsl/command_runner.rb'
-    - 'roast.gemspec'
+    - 'roast-ai.gemspec'
 
 Style/MethodCallWithArgsParentheses:
   Enabled: true
