--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,23 +14,14 @@ env:
   CI: true
 
 jobs:
-  rubies:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu]
-        ruby: ['3.2', '3.3', '3.4']
-        gemfile: ['activesupport7', 'activesupport8']
-    runs-on: ${{ matrix.os }}-latest
-    env:
-      BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.gemfile }}.gemfile
+  ci:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
         run: sudo apt-get update && sudo apt-get install -y ripgrep graphviz wamerican
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
       - run: bundle exec rake sorbet
       - run: bundle exec rake rubocop_ci
