Add example for defining new agent provider.
This is the most minimal possible agent. This one always responds with
the same thing and always succeeds. This should make it easier to
understand how to implement providers, as the Claude version is quite
complex.

Also we decided we don't care about duplicated agent responses in Claude
and removed some special casing.

--- a/examples/demo/Gemfile
+++ b/examples/demo/Gemfile
@@ -1,4 +1,6 @@
 # frozen_string_literal: true
 
+source "https://rubygems.org"
+
 gem "roast-ai", path: "../.."
 gem "plugin-gem-example", path: "../plugin-gem-example"
