--- a/examples/plugin-gem-example/Gemfile
+++ b/examples/plugin-gem-example/Gemfile
@@ -5,6 +5,8 @@ source "https://rubygems.org"
 # Specify your gem's dependencies in plugin-gem-example.gemspec
 gemspec
 
+gem "roast-ai", path: "../.."
+
 gem "irb"
 gem "rake", "~> 13.0"
 
